--- a/.github/workflows/symlink-validator.yml
+++ b/.github/workflows/symlink-validator.yml
@@ -2,14 +2,11 @@ name: Symlink Validator
 
 on:
   push:
-    # Run on pushes to all branches
     branches:
       - '**'
   pull_request:
-    # Run for pull requests against all branches
     branches:
       - '**'
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -22,25 +19,22 @@ jobs:
       - name: Verify Symlinks
         id: symlink_check
         run: |
-          # Initialize a flag to track if any invalid symlinks are found
-          INVALID_FOUND=0
-          
-          echo "Starting symlink validation..."
-          
-          # Find all files of type 'l' (symlink) recursively and process them.
+          BROKEN_LINKS=$(mktemp)
+    
           find . -type l -print0 | while IFS= read -r -d $'\0' symlink; do
-              # Use 'test -e' to check if the file the symlink points to exists.
+              # Check if the target of the symlink exists
               if ! test -e "$symlink"; then
-                  # Report the broken symlink
+                  # Add path to the temporary file
+                  echo "$symlink" >> "$BROKEN_LINKS"
                   echo "::error file=$symlink::Broken symlink found: $symlink points to a non-existent target."
-                  INVALID_FOUND=1
               fi
           done
           
-          if [ $INVALID_FOUND -eq 1 ]; then
-              echo "ERROR: One or more broken symlinks were found."
-              # Fail the step if any invalid symlinks were found
-              exit 1
+          if [ -s "$BROKEN_LINKS" ]; then
+              echo "FATAL: Broken symlinks detected."
+              rm "$BROKEN_LINKS"
+              exit 1 
           else
               echo "All symlinks are valid. The repository is clean."
+              rm "$BROKEN_LINKS"
           fi
